umps-master/codice-gruppo18/errori.txt
mipsel-linux-gnu-gcc -ffreestanding -ansi -mips1 -mfp32 -std=gnu11 -fno-stack-protector -I /usr/local/include/umps2 -I. -Wall   -c -o kernel.o kernel.c
In file included from kernel.c:7:0:
utils.c: In function ‘aging’:
utils.c:30:19: warning: initialization from incompatible pointer type [-Wincompatible-pointer-types]
     pcb_t* temp = CODA->next;
                   ^~~~
utils.c:33:14: warning: assignment from incompatible pointer type [-Wincompatible-pointer-types]
         temp = &temp->p_next;
              ^
mipsel-linux-gnu-gcc -ffreestanding -ansi -mips1 -mfp32 -std=gnu11 -fno-stack-protector -I /usr/local/include/umps2 -I. -Wall   -c -o handler.o handler.c
In file included from kernel.c:7:0,
                 from handler.h:10,
                 from handler.c:1:
utils.c: In function ‘aging’:
utils.c:30:19: warning: initialization from incompatible pointer type [-Wincompatible-pointer-types]
     pcb_t* temp = CODA->next;
                   ^~~~
utils.c:33:14: warning: assignment from incompatible pointer type [-Wincompatible-pointer-types]
         temp = &temp->p_next;
              ^
handler.c: In function ‘interrupt_handler’:
handler.c:18:12: error: redefinition of ‘proc’
     pcb_t* proc = removeProcQ(testa);
            ^~~~
handler.c:5:12: note: previous definition of ‘proc’ was here
     pcb_t* proc = getPROC();
            ^~~~
<builtin>: recipe for target 'handler.o' failed
make: *** [handler.o] Error 1
